<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rtc_backgroundColor">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:background="@drawable/rtc_background_niu" />

    <ImageButton
        android:id="@+id/setting_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="16dp"
        android:background="@color/rtc_backgroundColor"
        android:onClick="onClickBack"
        android:src="@mipmap/rtc_back" />

    <EditText
        android:id="@+id/user_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_btn"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rtc_oval_edit_text_background"
        android:paddingLeft="15dp"
        android:paddingTop="8dp"
        android:paddingRight="15dp"
        android:paddingBottom="8dp"
        android:textColor="@color/rtc_textColor"
        android:textColorHint="@color/rtc_textColor"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tips_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_name_edit_text"
        android:layout_alignStart="@id/user_name_edit_text"
        android:layout_alignEnd="@id/user_name_edit_text"
        android:layout_marginTop="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/rtc_user_name_tips"
        android:textColor="@color/rtc_textColor" />

    <RelativeLayout
        android:id="@+id/config_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tips_text_view"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rtc_oval_edit_text_background"
        android:gravity="center_vertical"
        android:onClick="onClickConfigParams"
        android:paddingStart="15dp"
        android:paddingTop="8dp"
        android:paddingEnd="15dp"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/config_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:textColor="@color/rtc_textColor" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/rtc_arrow_down" />
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/codec_mode_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/config_spinner"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rtc_oval_edit_text_background"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingTop="2dp"
        android:paddingEnd="15dp"
        android:paddingBottom="2dp">

        <RadioButton
            android:id="@+id/sw_radio_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shadowColor="@color/rtc_blue"
            android:text="@string/rtc_codec_sw"
            android:textColor="@color/rtc_textColor" />

        <RadioButton
            android:id="@+id/hw_radio_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rtc_codec_hw"
            android:textColor="@color/rtc_textColor" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/maintain_resolution_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/codec_mode_button"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rtc_oval_edit_text_background"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingTop="2dp"
        android:paddingEnd="15dp"
        android:paddingBottom="2dp"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/maintain_res_button_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shadowColor="@color/rtc_blue"
            android:text="@string/rtc_maintain_resolution_yes"
            android:textColor="@color/rtc_textColor" />

        <RadioButton
            android:id="@+id/maintain_res_button_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rtc_maintain_resolution_no"
            android:textColor="@color/rtc_textColor" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/sample_rate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/maintain_resolution_button"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rtc_oval_edit_text_background"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingTop="2dp"
        android:paddingEnd="15dp"
        android:paddingBottom="2dp">

        <RadioButton
            android:id="@+id/low_sample_rate_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shadowColor="@color/rtc_blue"
            android:text="@string/rtc_low_sample_rate_string"
            android:textColor="@color/rtc_textColor" />

        <RadioButton
            android:id="@+id/high_sample_rate_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rtc_high_sample_rate_string"
            android:textColor="@color/rtc_textColor" />
    </RadioGroup>

    <TextView
        android:id="@+id/tips_capture_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sample_rate_button"
        android:layout_alignStart="@id/user_name_edit_text"
        android:layout_alignEnd="@id/user_name_edit_text"
        android:layout_marginTop="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/rtc_capture_tips"
        android:textColor="@color/rtc_textColor" />

    <EditText
        android:id="@+id/app_id_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tips_capture_view"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rtc_oval_edit_text_background"
        android:hint="修改APP_ID"
        android:paddingLeft="15dp"
        android:paddingTop="8dp"
        android:paddingRight="15dp"
        android:paddingBottom="8dp"
        android:textColor="@color/rtc_textColor"
        android:textColorHint="@color/rtc_textColor"
        android:textSize="15sp" />

    <Switch
        android:id="@+id/webrtc_aec3_enable_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_id_edit_text"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="16dp"
        android:text="启用 AEC3"
        android:textColor="@color/rtc_textColor" />

    <LinearLayout
        android:id="@+id/test_mode_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/webrtc_aec3_enable_btn"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/test_mode_width"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rtc_oval_edit_text_background"
                android:digits="0123456789"
                android:hint="Width"
                android:paddingLeft="10dp"
                android:paddingTop="8dp"
                android:paddingRight="10dp"
                android:paddingBottom="8dp"
                android:textColor="@color/rtc_textColor"
                android:textColorHint="@color/rtc_textColor"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/test_mode_high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/rtc_oval_edit_text_background"
                android:digits="0123456789"
                android:hint="High"
                android:paddingLeft="10dp"
                android:paddingTop="8dp"
                android:paddingRight="10dp"
                android:paddingBottom="8dp"
                android:textColor="@color/rtc_textColor"
                android:textColorHint="@color/rtc_textColor"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/test_mode_fps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/rtc_oval_edit_text_background"
                android:digits="0123456789"
                android:hint="FPS"
                android:paddingLeft="10dp"
                android:paddingTop="8dp"
                android:paddingRight="10dp"
                android:paddingBottom="8dp"
                android:textColor="@color/rtc_textColor"
                android:textColorHint="@color/rtc_textColor"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/test_mode_bitrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/rtc_oval_edit_text_background"
                android:digits="0123456789"
                android:hint="BITRATE"
                android:paddingLeft="10dp"
                android:paddingTop="8dp"
                android:paddingRight="10dp"
                android:paddingBottom="8dp"
                android:textColor="@color/rtc_textColor"
                android:textColorHint="@color/rtc_textColor"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/test_mode_layout"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rtc_oval_btn_background"
        android:gravity="center"
        android:onClick="onClickSaveConfiguration"
        android:text="保存"
        android:textColor="@color/rtc_textColor"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/version_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:textColor="@color/rtc_versionCodeColor" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/version_code"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            android:id="@+id/dividing_line"
            android:layout_width="1dp"
            android:layout_height="28dp"
            android:layout_centerInParent="true"
            android:layout_margin="8dp"
            android:background="@color/rtc_white" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:layout_toStartOf="@id/dividing_line"
            android:src="@mipmap/rtc_ic_niu_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:layout_toEndOf="@id/dividing_line"
            android:text="@string/rtc_niu_conference"
            android:textColor="@color/rtc_white" />
    </RelativeLayout>

</RelativeLayout>
